# git-hooks-dispatch

./: Cargo.toml  LICENSE  README.md
.github/: renovate.json
.github/workflows/: release.yml  test.yml
src/: args.rs  executor.rs  hook.rs  main.rs  run.rs
